@@ -61,7 +61,7 @@ class ApiSignatureRequestTest {
     @Test
     void testCanonicalizedQueryString() {
         ApiSignatureRequest request = buildRequest("age=36&name=zhans&tags=tag0&tags=tag1&empty=", "{}");
-        Assertions.assertEquals("age=36&empty=&name=zhans&tags=tag0&tags=tag1", request.getQueryString());
+        Assertions.assertEquals("age=36&empty=&name=zhans&tags=tag0&tags=tag1", request.queryString());
         Assertions.assertEquals("method=POST&requestPath=/api/v1/example/users&nonce=jlj3rn2930d-123210dq&timestamp=123456789&queryStringMd5" +
                 "=c79c749e047d59f40baef9a139abe834&requestBodyMd5=99914b932bd37a50b983c5e7c90ae93b", request.getSignTextForDigest());
         Assertions.assertEquals("POST /api/v1/example/users\n" +
@@ -86,9 +86,9 @@ class ApiSignatureRequestTest {
     @Test
     void testParseQueryParamsAsMap() {
         Map<String, List<String>> queryParams = ApiSignatureRequest.parseQueryParamsAsMap("a=1%2B2&b=1 2&h=1=1");
-        Assertions.assertEquals("1+2", queryParams.get("a").get(0));
-        Assertions.assertEquals("1 2", queryParams.get("b").get(0));
-        Assertions.assertEquals("1=1", queryParams.get("h").get(0));
+        Assertions.assertEquals("1+2", queryParams.get("a").getFirst());
+        Assertions.assertEquals("1 2", queryParams.get("b").getFirst());
+        Assertions.assertEquals("1=1", queryParams.get("h").getFirst());
     }
 
     @Test
